Added template for script Fixed button animations

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
       </header>
       <!--=============== CALCULATOR ===============-->
       <div class="calculator__container grid">
-        <div class="calculator__output">
-          <div class="calculator__output-operand">399,981</div>
+        <div class="calculator__result">
+          <div class="calculator__previousOperand"></div>
+          <div class="calculator__currentOperand"></div>
         </div>
 
         <div class="calculator__body">
